Changed audio file with smaller one

--- a/csharp-meeting-1/ConsoleInputOutput/11. FallingRocks/11.FallingRocks.csproj
+++ b/csharp-meeting-1/ConsoleInputOutput/11. FallingRocks/11.FallingRocks.csproj
@@ -48,8 +48,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="PoA.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="space.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
