--- a/csharp-meeting-1/Methods/12.ExtendPolynomials/12.ExtendPolynomials.csproj
+++ b/csharp-meeting-1/Methods/12.ExtendPolynomials/12.ExtendPolynomials.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>dba44f62-c485-4e42-be43-c93751e6af49</ProjectGuid>
+    <ProjectGuid>{386127D3-2D41-4558-AAA8-4831F33D5463}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>_12.ExtendPolynomials</RootNamespace>
-    <AssemblyName>_12.ExtendPolynomials</AssemblyName>
+    <AssemblyName>12.ExtendPolynomials</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ExtendPolynomials.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
